# typed-mock

./: .pre-commit-config.yaml  README.md  activate_env.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  pre-commit.yaml  publish.yaml
src/typed_mock/: __init__.py  common.py  errors.py  fake_function.py  fake_function_builder.py  fake_method.py  fake_method_builder.py  funcs.py  impl.py  mock.py  mocker.py  patched.py  utility.py
test/: common.py  test_bound_method_unpatch.py  test_coroutine.py  test_function_assignment.py  test_function_mocking.py  test_mock.py  test_mocker.py  test_when.py  todo_test.py
